name:           haste-webgl
version:        0.1.0.0
license:        MIT
license-file:   LICENSE
author:         Matthew Spellings
maintainer:     klarh7@gmail.com
category:       Web
build-type:     Simple
cabal-version:  >=1.10

Flag samples
  Description: Compile samples
  Default:     True

library
  exposed-modules:   
                       Haste.Graphics.WebGL,
                       Haste.Graphics.WebGL.Buffer,
                       Haste.Graphics.WebGL.Extensions.InstancedArrays,
                       Haste.Graphics.WebGL.Framebuffer,
                       Haste.Graphics.WebGL.FramebufferOperations,
                       Haste.Graphics.WebGL.PerFragment,
                       Haste.Graphics.WebGL.ProgramsShaders,
                       Haste.Graphics.WebGL.Rasterization,
                       Haste.Graphics.WebGL.Special,
                       Haste.Graphics.WebGL.Texture,
                       Haste.Graphics.WebGL.Types,
                       Haste.Graphics.WebGL.UniformsAttributes,
                       Haste.Graphics.WebGL.ViewClip
  build-depends:     
                       base >=4.7 && < 5.0,
                       haste-compiler >=0.4 && <0.5,
                       deepseq >=1.3 && <1.4,
                       fgeom >=0.1.1 && <0.2
  hs-source-dirs:    src
  ghc-options:       -Wall
  default-language:  Haskell2010


executable example
  if !flag(samples)
        buildable: False
  build-depends:   
                   base >= 4,
                   haste-compiler >=0.4 && <0.5,
                   deepseq >=1.3 && <1.4,
                   fgeom >=0.1.1 && <0.2
  hs-source-dirs:  
                   examples
                   src
  default-language:  Haskell2010
  ghc-options:     -Wall -rtsopts
  main-is:         Shapes/lwgl4.hs
  other-modules:   
                   Haste.Graphics.WebGL,
                   Haste.Graphics.WebGL.Buffer,
                   Haste.Graphics.WebGL.Extensions.InstancedArrays,
                   Haste.Graphics.WebGL.Framebuffer,
                   Haste.Graphics.WebGL.FramebufferOperations,
                   Haste.Graphics.WebGL.PerFragment,
                   Haste.Graphics.WebGL.ProgramsShaders,
                   Haste.Graphics.WebGL.Rasterization,
                   Haste.Graphics.WebGL.Special,
                   Haste.Graphics.WebGL.Texture,
                   Haste.Graphics.WebGL.Types,
                   Haste.Graphics.WebGL.UniformsAttributes,
                   Haste.Graphics.WebGL.ViewClip,
                   Shapes.Drawable

